syntax = "proto3";

package bilibili.community.service.dm.v1;

message DmSegMobileReply {
    // 弹幕列表
    repeated DanmakuElem elems = 1;
    // 是否已关闭弹幕
    // 0:未关闭 1:已关闭
    int32 state = 2;
    // 弹幕云屏蔽ai评分值
    DanmakuAIFlag ai_flag = 3;
    repeated DmColorful colorfulSrc = 5;
}

message DmWebViewReply {
    // 是否已关闭弹幕
    // 0:未关闭 1:已关闭
    int32 state = 1;
    //
    string text = 2;
    //
    string text_side = 3;
    // 分段弹幕配置
    DmSegConfig dm_sge = 4;
    // 云屏蔽配置信息
    DanmakuFlagConfig flag = 5;
    // 高级弹幕专包url(bfs)
    repeated string special_dms = 6;
    // check box 是否展示
    bool check_box = 7;
    // 弹幕数
    int64 count = 8;
    // 互动弹幕
    repeated CommandDm commandDms = 9;
    // 用户弹幕配置
    DanmuWebPlayerConfig player_config = 10;
    // 用户举报弹幕 cid维度屏蔽
    repeated string report_filter_content = 11;
    //
    repeated Expressions expressions = 12;
    //
    repeated PostPanel post_panel = 13;
    //
    repeated string activity_meta = 14;
}

message DanmakuElem {
    // 弹幕dmid
    int64 id = 1;
    // 弹幕出现位置(单位ms)
    int32 progress = 2;
    // 弹幕类型 1 2 3:普通弹幕 4:底部弹幕 5:顶部弹幕 6:逆向弹幕 7:高级弹幕 8:代码弹幕 9:BAS弹幕(pool必须为2)
    int32 mode = 3;
    // 弹幕字号
    int32 fontsize = 4;
    // 弹幕颜色
    uint32 color = 5;
    // 发送者mid hash
    string midHash = 6;
    // 弹幕正文
    string content = 7;
    // 发送时间
    int64 ctime = 8;
    // 权重 用于屏蔽等级 区间:[1,10]
    int32 weight = 9;
    // 动作
    string action = 10;
    // 弹幕池 0:普通池 1:字幕池 2:特殊池(代码/BAS弹幕)
    int32 pool = 11;
    // 弹幕dmid str
    string idStr = 12;
    // 弹幕属性位(bin求AND)
    // bit0:保护 bit1:直播 bit2:高赞
    int32 attr = 13;
    //
    string animation = 22;
    // 大会员专属颜色
    DmColorfulType colorful = 24;
}

message DanmakuAIFlag {
    // 弹幕ai云屏蔽条目
    repeated DanmakuFlag dm_flags = 1;
}

message DmColorful {
    DmColorfulType type = 1; // 颜色类型
    string src          = 2; //
}

message DmSegConfig {
    //
    int64 page_size = 1;
    //
    int64 total = 2;
}

message DanmakuFlagConfig {
    // 云屏蔽等级
    int32 rec_flag = 1;
    // 云屏蔽文案
    string rec_text = 2;
    // 云屏蔽开关
    int32 rec_switch = 3;
}

message CommandDm {
    // 弹幕id
    int64 id = 1;
    // 对象视频cid
    int64 oid = 2;
    // 发送者mid
    int64 mid = 3;
    // 互动弹幕指令
    string command = 4;
    // 互动弹幕正文
    string content = 5;
    // 出现时间
    int32 progress = 6;
    // 创建时间
    string ctime = 7;
    // 发布时间
    string mtime = 8;
    // 扩展json数据
    string extra = 9;
    // 弹幕id str类型
    string idStr = 10;
}

message DanmuWebPlayerConfig {
    bool dm_switch                    = 1;  // 是否开启弹幕
    bool ai_switch                    = 2;  // 是否开启智能云屏蔽
    int32 ai_level                    = 3;  // 智能云屏蔽等级
    bool blocktop                     = 4;  // 是否屏蔽顶端弹幕
    bool blockscroll                  = 5;  // 是否屏蔽滚动弹幕
    bool blockbottom                  = 6;  // 是否屏蔽底端弹幕
    bool blockcolor                   = 7;  // 是否屏蔽彩色弹幕
    bool blockspecial                 = 8;  // 是否屏蔽重复弹幕
    bool preventshade                 = 9;  // 
    bool dmask                        = 10; // 
    float opacity                     = 11; // 
    int32 dmarea                      = 12; // 
    float speedplus                   = 13; // 
    float fontsize                    = 14; // 弹幕字号
    bool screensync                   = 15; // 
    bool speedsync                    = 16; // 
    string fontfamily                 = 17; // 
    bool bold                         = 18; // 是否使用加粗
    int32 fontborder                  = 19; // 
    string draw_type                  = 20; // 弹幕渲染类型
    int32 senior_mode_switch          = 21; //
    int32 ai_level_v2                 = 22; //
    map<int32, int32> ai_level_v2_map = 23; //
}

message Expressions {
    //
    repeated Expression data = 1;
}

message PostPanel {
    //
    int64 start = 1;
    //
    int64 end = 2;
    //
    int64 priority = 3;
    //
    int64 biz_id = 4;
    //
    PostPanelBizType biz_type = 5;
    //
    ClickButton click_button = 6;
    //
    TextInput text_input = 7;
    //
    CheckBox check_box = 8;
    //
    Toast toast = 9;
}

enum DmColorfulType {
    NoneType        = 0;     // 无
    VipGradualColor = 60001; // 渐变色
}

message DanmakuFlag {
    // 弹幕dmid
    int64 dmid = 1;
    // 评分
    uint32 flag = 2;
}

message Expression {
    //
    repeated string keyword = 1;
    //
    string url = 2;
    //
    repeated Period period = 3;
}

enum PostPanelBizType {
    PostPanelBizTypeNone      = 0; //
    PostPanelBizTypeEncourage = 1; //
    PostPanelBizTypeColorDM   = 2; //
    PostPanelBizTypeNFTDM     = 3; //
    PostPanelBizTypeFragClose = 4; //
    PostPanelBizTypeRecommend = 5; //
}

message ClickButton {
    //
    repeated string portrait_text = 1;
    //
    repeated string landscape_text = 2;
    //
    repeated string portrait_text_focus = 3;
    //
    repeated string landscape_text_focus = 4;
    //
    RenderType render_type = 5;
    //
    bool show = 6;
    //
    Bubble bubble = 7;
}

message TextInput {
    //
    repeated string portrait_placeholder = 1;
    //
    repeated string landscape_placeholder = 2;
    //
    RenderType render_type = 3;
    //
    bool placeholder_post = 4;
    //
    bool show = 5;
    //
    repeated Avatar avatar = 6;
    //
    PostStatus post_status = 7;
    //
    Label label = 8;
}

message CheckBox {
    //
    string text = 1;
    //
    CheckboxType type = 2;
    //
    bool default_value = 3;
    //
    bool show = 4;
}

message Toast {
    //
    string text = 1;
    //
    int32 duration = 2;
    //
    bool show = 3;
    //
    Button button = 4;
}

message Period {
    //
    int64 start = 1;
    //
    int64 end = 2;
}

enum RenderType {
    RenderTypeNone     = 0; //
    RenderTypeSingle   = 1; //
    RenderTypeRotation = 2; //
}

message Bubble {
    //
    string text = 1;
    //
    string url = 2;
}

message Avatar {
    //
    string id = 1;
    //
    string url = 2;
    //
    AvatarType avatar_type = 3;
}

enum PostStatus {
    PostStatusNormal = 0; //
    PostStatusClosed = 1; //
}

message Label {
    //
    string title = 1;
    //
    repeated string content = 2;
}

enum CheckboxType {
    CheckboxTypeNone      = 0; //
    CheckboxTypeEncourage = 1; //
    CheckboxTypeColorDM   = 2; //
}

message Button {
    //
    string text = 1;
    //
    ToastFunctionType action = 2;
}

enum AvatarType {
    AvatarTypeNone = 0; //
    AvatarTypeNFT  = 1; //
}

enum ToastFunctionType {
    ToastFunctionTypeNone      = 0; //
    ToastFunctionTypePostPanel = 1; //
}